--- a/testwpf/CodeConfirmationPage.xaml
+++ b/testwpf/CodeConfirmationPage.xaml
@@ -16,6 +16,11 @@
             Height="44" CaretBrush="White" Margin="0,20,0,0"/>
         <Button x:Name="verifyButton" Content="Verify" HorizontalAlignment="Center"
             VerticalAlignment="Center" Background="#19000000" Width="170" Height="34" BorderBrush="#4C000000" Foreground="White" FontFamily="Candara" FontSize="18" Click="requestButton_Click" Margin="0,20,0,0"/>
+        <Button x:Name="changePhone" Content="Change phone number" Foreground="White" FontFamily="Candara" HorizontalAlignment="Center" Margin="0,10,0,0" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="changePhone_Click">
+            <Button.Effect>
+                <DropShadowEffect BlurRadius="3" ShadowDepth="0"/>
+            </Button.Effect>
+        </Button>
         <TextBlock x:Name="errorString" Visibility="Hidden" TextWrapping="WrapWithOverflow" Text="Error message" TextAlignment="Center" HorizontalAlignment="Center" Margin="0,10,0,0" Width="250" VerticalAlignment="Bottom" Foreground="#FFF96868" FontFamily="Candara" MaxHeight="120" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="True">
             <TextBlock.Effect>
                 <DropShadowEffect ShadowDepth="0" Color="Red" BlurRadius="7"/>
