--- a/telegramwpf/MainWindow.xaml
+++ b/telegramwpf/MainWindow.xaml
@@ -6,7 +6,8 @@
         mc:Ignorable="d" 
         Width="300" Height="450"
       d:DesignHeight="450" d:DesignWidth="300"
-      Title="Telegram" WindowStyle="None" AllowsTransparency="True" FontFamily="Microsoft JhengHei UI">
+      Title="Telegram" WindowStyle="None" AllowsTransparency="True" FontFamily="Microsoft JhengHei UI"
+    ShowInTaskbar="False">
 
     <Window.Resources>
         <Style x:Key="FocusVisual">
